deployment-nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx-ns
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-app
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-app
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx-app
        ports:
        - containerPort: 80
