service-nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-ns
  name: nginx-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-app
