ingress-game-2048.yaml
---
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    #alb.ingress.kubernetes.io/group.name: ng-556404fb
spec:
  rules:
    - http:
        paths:
          - path: /
            #pathType:
            pathType: Prefix
            backend:
              service:
                #name: game-2048
                name: service-2048
                port:
                  number: 80
